--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+def localProperties = new Properties()
+localProperties.load(new FileInputStream(rootProject.file("local.properties")))
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
@@ -19,6 +22,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', "API_KEY", localProperties['GoolgeAPIKey']
+            resValue 'string', "api_key", localProperties['GoolgeAPIKey']
+
+        }
+        debug {
+            buildConfigField 'String', "api_key", localProperties['GoolgeAPIKey']
+            resValue 'string', "api_key", localProperties['GoolgeAPIKey']
         }
     }
 }
