--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation "org.jetbrains.anko:anko:0.10.8"
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
 }
