--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation "org.jetbrains.anko:anko:0.10.8"
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
