--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,13 @@ apply plugin: 'kotlin-android-extensions'
 def localProperties = new Properties()
 localProperties.load(new FileInputStream(rootProject.file("local.properties")))
 
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
@@ -17,18 +24,19 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField 'String', "API_KEY", localProperties['GoolgeAPIKey']
-            resValue 'string', "api_key", localProperties['GoolgeAPIKey']
+            buildConfigField 'String', "API_KEY", localProperties['GoogleApiKey']
+            resValue 'string', "api_key", localProperties['GoogleApiKey']
 
         }
         debug {
-            buildConfigField 'String', "api_key", localProperties['GoolgeAPIKey']
-            resValue 'string', "api_key", localProperties['GoolgeAPIKey']
+            buildConfigField 'String', "api_key", localProperties['GoogleApiKey']
+            resValue 'string', "api_key", localProperties['GoogleApiKey']
         }
     }
 }
@@ -40,12 +48,14 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation "org.jetbrains.anko:anko:0.10.8"
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'com.google.code.gson:gson:2.8.5'
 }
