--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,10 +18,12 @@
         android:name=".networking.BackendVolley"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".map.MapActivity" />
-        <activity android:name=".LoginActivity">
+        <activity
+            android:name=".EntryActivity"
+            android:label="@string/app_name"
+            android:theme="@style/MidpointFullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
