--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
     defaultConfig {
-        applicationId "com.onpoint.midpoint"
+        applicationId "com.nopoint.midpoint"
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
