--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -59,4 +60,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.mac229.FragmentUtils:fragmentutils-kt:1.2.1'
 }
