--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:theme="@style/MidpointFullscreen"
             android:windowSoftInputMode="adjustNothing"/>
         <activity
             android:name=".EntryActivity"
