--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
     implementation 'androidx.work:work-runtime:2.2.0'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
 }
 apply plugin: 'com.google.gms.google-services'
