--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.hardware.camera" />
+    <uses-permission android:name="android.hardware.camera.autofocus" />
 
     <application
         android:name=".networking.BackendVolley"
@@ -32,7 +35,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".QRActivity"/>
+        <activity
+            android:name=".QRScanActivity"
+            android:theme="@style/MidpointFullscreen"/>
+        <activity
+            android:name=".QRScannedActivity"
+            android:theme="@style/MidpointFullscreen"/>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/api_key" />
